# rusix

./: .gitignore  Cargo.toml  config.yaml  config_dev.yaml  configs.yaml  configs_dev.yaml  diesel.toml
migrations/2025-03-15-165902_posts/: down.sql  up.sql
src/: config.rs  configs.rs  datasource.rs  disock.rs  lib.rs  main.rs  schema.rs  schemas.rs  state.rs  utils.rs
src/api/: middlewares.rs  mod.rs  response.rs
src/api/handlers/: demo.rs  hello.rs  mod.rs  posts.rs
src/api/routers/: demo.rs  hello.rs  mod.rs  posts.rs
src/apis/: handlers_demo.rs  mod.rs  response.rs  routers.rs  routers_demo.rs  routers_hello.rs  server.rs
src/configs/: api_server.rs  mod.rs
src/models/: mod.rs
src/repos/: mod.rs
