[package]
name = "rusix"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.140"
validator = { version = "0.19", features = ["derive"] }
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
url = { version = "2" }
log = "0.4.26"
simple_logger = "4.0"
derive_more = "2.0.1"